@@ -353,15 +353,6 @@ public class SipClientResource extends ClientResource {
     }
 
     /**
-     * Returns the request's call id.
-     * 
-     * @return The request's call id.
-     */
-    public String getCallId() {
-        return getRequest().getCallId();
-    }
-
-    /**
      * Returns the request's call sequence.
      * 
      * @return The request's call sequence.
@@ -384,9 +375,27 @@ public class SipClientResource extends ClientResource {
         return (SipRequest) super.getRequest();
     }
 
+    /**
+     * Returns the request's call ID.
+     * 
+     * @return The request's call ID.
+     */
+    public String getRequestCallId() {
+        return getRequest().getCallId();
+    }
+
     @Override
     public SipResponse getResponse() {
         return (SipResponse) super.getResponse();
+    }
+
+    /**
+     * Returns the response's call ID.
+     * 
+     * @return The response's call ID.
+     */
+    public String getResponseCallId() {
+        return getResponse().getCallId();
     }
 
     /**
@@ -549,6 +558,16 @@ public class SipClientResource extends ClientResource {
             throw new IllegalArgumentException(
                     "Only SipRequest instances are allowed as parameter");
         }
+    }
+
+    /**
+     * Sets the request's call ID.
+     * 
+     * @param callId
+     *            The call ID.
+     */
+    public void setRequestCallId(String callId) {
+        getRequest().setCallId(callId);
     }
 
     @Override
